Ajustes no modulo de Vendas

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -53,6 +53,7 @@
     observacao: Observação
     default: Atual
     total_despesas: Total Despesas
+    previsao_vendas: Previsão Vendas
 
   venda:
     self: Venda
