Ajustes no módulo de vendas e compras

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -53,6 +53,7 @@
     observacao: Observação
     default: Atual
     total_despesas: Total Despesas
+    previsao_lucro: Previsão Lucro
     previsao_vendas: Previsão Vendas
 
   venda:
