Inclusao do Modulo de Analise de Cliente

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,10 +7,14 @@
     menu: 
       home: Home
       administracao: Administração
+      analise: Análise
 
   home:
     titulo: Painel Geral
     registros: registro(s)
+
+  analise:
+    titulo: Análise Cliente  
   
   cliente:
     self: Cliente
